@@ -1,8 +1,11 @@
 cryptsetup (2:1.0.1-17) unstable; urgency=low
 
-  * NOT RELEASED YET
+  [ Jonas Meurer ]
+  * merged ubuntu patches:
+    - modify cryptdisks init script to use lsb functions
+    - add luksformat, and a manpage
 
- -- Jonas Meurer <mejo@debian.org>  Mon, 30 Jan 2006 18:48:13 +0100
+ -- Jonas Meurer <mejo@debian.org>  Mon, 30 Jan 2006 19:46:23 +0100
 
 cryptsetup (2:1.0.1-16) unstable; urgency=low
 
